--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,8 @@
       content="assets/icons/largetile.png"
     />
   </head>
-  <body>
-    <app-root></app-root>
-  </body>
+    <div>
+      <img src="assets/images/LayerTwoUpgrade.jpg" class="center" style="max-width: 600px;">
+      <p style="text-align: center; color: white;">We're doing some maintenance. We'll be right back!</p>
+    </div>
 </html>
