--- a/src/index.html
+++ b/src/index.html
@@ -108,5 +108,10 @@
     <div>
       <img src="assets/images/LayerTwoUpgrade.jpg" class="center" style="max-width: 600px;">
       <p style="text-align: center; color: white;">We're doing some maintenance. We'll be right back!</p>
+      <p style="text-align: center; color: white;">New token will be airdropped to all liquid AXN holders.</p>
+      <p class="rainbow" style="text-align: center; color: white;">YOUR STAKES ARE SAFU</p>
+      <p class="rainbow" style="text-align: center; color: white;">LAST BLOCK NUMBER OF LAYER ONE IS 11472474</p>
+      <p class="rainbow" style="text-align: center; color: white;">JOIN OUR LAYER TWO UPGRADE LIVESTREAM</p>
+      <iframe class="center" width="424" height="240" src="https://www.youtube.com/embed/srRXp1_pKas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </html>
