--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,6 @@
       <p class="rainbow" style="text-align: center; color: white;">YOUR STAKES ARE SAFU</p>
       <p class="rainbow" style="text-align: center; color: white;">LAST BLOCK NUMBER OF LAYER ONE IS 11472474</p>
       <p class="rainbow" style="text-align: center; color: white;">JOIN OUR LAYER TWO UPGRADE LIVESTREAM</p>
-      <iframe width="424" height="240" src="https://www.youtube.com/embed/FpprtFbKWaM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="center" width="424" height="240" src="https://www.youtube.com/embed/FpprtFbKWaM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </html>
